Dom basic start

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>JS Practice</title>
   </head>
   <body>
+    <h1 id="heading1">This is heading one</h1>
+    <h1 id="heading2">This is heading one</h1>
+
+    <p id="pera1">this this firday</p>
+
     <script src="script.js"></script>
   </body>
 </html>
