Js image slider

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>JS Practice</title>
   </head>
   <body>
-    <h1 id="heading1">This is heading one</h1>
-    <h1 id="heading2">This is heading one</h1>
-
-    <p id="pera1">this this firday</p>
+    <button onclick="prev()">previsous</button>
+    <img src="./images/sufian-1.png" alt="" width="500" height="500" />
+    <button onclick="next()">next</button>
 
     <script src="script.js"></script>
   </body>
