add css style dynamicaly using js

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Practice</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <button onclick="prev()">previsous</button>
-    <img src="./images/sufian-1.png" alt="" width="500" height="500" />
-    <button onclick="next()">next</button>
+    <p id="paraId">This is paragraph</p>
+    <button onclick="addStyle()">add style</button>
+    <button onclick="removeStyle()">remove style</button>
 
     <script src="script.js"></script>
   </body>
