--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p id="paraId">This is paragraph</p>
-    <button onclick="addStyle()">add style</button>
-    <button onclick="removeStyle()">remove style</button>
+    <h1>Bangladesh is my country</h1>
 
     <script src="script.js"></script>
   </body>
