Event listner with multiple elements

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Bangladesh is my country</h1>
+    <h1>You have not clicked any button</h1>
+
+    <button class="myButton">button 1</button>
+    <button class="myButton">button 2</button>
+    <button class="myButton">button 3</button>
 
     <script src="script.js"></script>
   </body>
